# link-my-dev

./: .gitignore
poc/api/: .env  .gitignore  Cargo.toml  docker-compose.yml  init_event_sourcing.sql
poc/api/src/: bootstrap.rs  config.rs  main.rs
poc/api/src/collaboration/: bootstrap.rs  config.rs  mod.rs
poc/api/src/collaboration/application/: mod.rs  queries.rs  views.rs
poc/api/src/collaboration/domain/: commands.rs  events.rs  member.rs  mod.rs  team.rs
poc/api/src/collaboration/persistence/: mod.rs  postgres.rs
poc/api/src/collaboration/persistence/memory/: mod.rs
poc/api/src/collaboration/persistence/postgres/: mod.rs
poc/api/src/collaboration/read/mongodb/: mod.rs  teams.rs
poc/api/src/collaboration/store/memory/: mod.rs
poc/api/src/collaboration/store/postgres/: mod.rs  queries.rs
poc/api/src/collaboration/web/: mod.rs  teams.rs
poc/api/src/common/: id_generator.rs  mod.rs  web.rs
poc/api/src/common/configuration/: config.rs
poc/api/src/common/domain/: entity.rs
poc/api/src/common/mongodb/: client.rs  item.rs  mod.rs
poc/api/src/identity/: bootstrap.rs  config.rs  mod.rs
poc/api/src/identity/application/: mod.rs  views.rs
poc/api/src/identity/domain/: account.rs  commands.rs  events.rs  mod.rs
poc/api/src/identity/persistence/postgres/: mod.rs
poc/api/src/identity/read/mongodb/: accounts.rs  mod.rs
poc/api/src/identity/web/: accounts.rs  mod.rs
poc/api/src/web/: mod.rs
